🚀 Adaptação completa para Streamlit Cloud
- ✅ Atualizado requirements.txt com versões específicas
- ✅ Criado .streamlit/config.toml para configurações
- ✅ Adicionado .env.example para configuração de variáveis
- ✅ Melhorado tratamento de erros em app.py e generate_knowledge_graph.py
- ✅ Criado guia completo de deploy (STREAMLIT_CLOUD_DEPLOY.md)
- ✅ Adicionado pipeline CI/CD (.github/workflows/ci.yml)
- ✅ Atualizado README.md com instruções de deploy
- ✅ Configurado .gitignore para arquivos do Streamlit
- ✅ Adicionado validação da API key OpenAI

Projeto pronto para deploy no Streamlit Cloud! 🎉

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # Configuração da API OpenAI
-# Substitua pela sua chave da API OpenAI
+# Obtenha sua chave em: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sua_chave_da_api_openai_aqui
+
+# Configurações opcionais do modelo
+# OPENAI_MODEL=gpt-4o
+# OPENAI_TEMPERATURE=0
