🔐 Adicionada configuração de secrets TOML para Streamlit Cloud
- ✅ Criado arquivo .streamlit/secrets.toml.example
- ✅ Atualizado generate_knowledge_graph.py para usar secrets do Streamlit
- ✅ Melhorado tratamento de chaves da API (env + secrets)
- ✅ Atualizado README com instruções de configuração TOML
- ✅ Atualizado .gitignore para proteger arquivos de secrets

Agora suporta tanto variáveis de ambiente quanto secrets TOML! 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,10 @@ dmypy.json
 .streamlit/
 .streamlit/secrets.toml
 
+# Secrets files
+secrets.toml
+*.toml
+
 # Generated HTML files
 knowledge_graph.html
 
